# Packi

./: .gitignore  Makefile  README.md
backend/: Cargo.toml  tauri.conf.json
backend/src/: adjust.rs  batch.rs  channel_pack.rs  image_io.rs  main.rs  normal_map.rs  pipeline.rs  presets.rs  settings.rs
frontend/: biome.json  build.ts  dev.ts  index.html  package.json  tsconfig.json
frontend/public/pbr-one/: material-shading.html
frontend/src/: App.tsx  globals.d.ts  main.tsx
frontend/src/components/: AdjustTools.tsx  AppSettings.tsx  BatchProcessor.tsx  ChannelPacker.tsx  ChannelSlotCard.tsx  FileSizing.tsx  HistorySidebar.tsx  NormalMapTools.tsx  PackTools.tsx  PreviewTools.tsx  Sidebar.tsx  SizeTools.tsx  TilingTools.tsx
frontend/src/components/pack/: PackPanel.tsx  SwizzlePanel.tsx  UnpackPanel.tsx
frontend/src/hooks/: useAlpacaGame.ts  useThreeScene.ts
frontend/src/stores/: adjustStore.ts  appStore.test.ts  appStore.ts  batchStore.test.ts  batchStore.ts  channelPackerStore.ts  normalToolsStore.ts  packStore.ts  previewStore.ts  settingsStore.ts  sizeStore.ts  toastStore.test.ts  toastStore.ts  undoStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts  pbr.ts
frontend/src/utils/: textureDetection.test.ts  textureDetection.ts
resources/icons/: generate-icons.sh  icon.icns
resources/icons/icon-source/: noun-source.html
resources/samples/metal-material/: metal-sample-source.html
resources/samples/rock-material/: Rocks005_2K-PNG.blend  Rocks005_2K-PNG.mtlx  Rocks005_2K-PNG.tres  Rocks005_2K-PNG.usdc  rock-sample-source.html
(+27 files in other folders)
