[package]
name = "packi"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-fs = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"
tauri-plugin-opener = "^2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
image = { version = "0.25", features = ["png", "tga", "jpeg"] }
base64 = "0.22"
exr = "1.7"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.flate2]
opt-level = 3
